objects/Order_Line_Status_Setting__mdt.object
<CustomObject>
    <description>Mapped settings based on Order Line Status + Banner</description>
    <fields>
        <fullName>Banner_Hudson_s_Bay__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Banner Hudson&apos;s Bay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Lord_Taylor__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Banner Lord + Taylor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_MHF__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Banner MHF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Off_5th__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Banner Off 5th</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Saks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Banner Saks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Be_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Be Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Line_Status__c</fullName>
        <label>Order Line Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Order Line Status Setting</label>
    <pluralLabel>Order Line Status Settings</pluralLabel>
</CustomObject>